[gd_scene load_steps=6 format=3 uid="uid://d05y2xm7fqoup"]

[ext_resource type="Script" path="res://entities/items/equipment_item.gd" id="1_item"]

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 41.1096

[sub_resource type="Animation" id="Animation_reset"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hover"]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hover"]
_data = {
"RESET": SubResource("Animation_reset"),
"hover": SubResource("Animation_hover")
}

[node name="EquipmentItem" type="Node2D"]
script = ExtResource("1_item")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="NameLabel" type="Label" parent="."]
visible = false
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -20.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Item Name"
horizontal_alignment = 1

[node name="HoverAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hover")
}
